@@ -198,4 +198,6 @@ PHP_EVAL_INCLINE($GTK_CFLAGS)
 PHP_EVAL_LIBLINE($GTK_LIBS, GTK_PLUS_SHARED_LIBADD)
 PHP_SUBST(GTK_PLUS_SHARED_LIBADD)
 PHP_SUBST(GTK_PLUS_GEN_SOURCES)
+GDK_KEYSYMS=`$GTK_CONFIG --prefix`/include/gdk/gdkkeysyms.h
+PHP_SUBST(GDK_KEYSYMS)
 PHP_GTK_EXTENSION(gtk+)
